tests/valid/trait/method_call_explicit_ufcs_local_inferred_pure_receiver_bool.facet
trait Runner {
  fn run(self: Self) -> unrestricted bool;
}

impl Runner for unrestricted bool {
  fn run(self: Self) -> unrestricted bool {
    self
  }
}

fn main() -> unrestricted bool {
  let x = true;
  (<unrestricted bool as Runner>::run x)
}
