tests/invalid/trait/method_call_explicit_ufcs_generic_direct_fn_receiver_safety_gate.facet
trait Runner {
  fn run(self: Self) -> unrestricted bool;
}

impl Runner for unrestricted bool {
  fn run(self: Self) -> unrestricted bool {
    self
  }
}

fn id<T>(value: unrestricted T) -> unrestricted T {
  value
}

fn main() -> unrestricted bool {
  (<unrestricted bool as Runner>::run (id<unrestricted bool> true))
}
